# hs-mgt-game

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LESSONS.md  README.md  SPEC.md
_workspace/: 01_evidence_map.md  02_mechanism_design.md  02_presentation_contract.md  03_domain_qa.md  03_presentation_qa.md  04_implementation_plan.md  05_implementation_plan_neurology.md  06_implementation_plan_difficulty_expansion.md  07_implementation_plan_difficulty_resources.md  08_implementation_plan_affiliation_validation.md  09_implementation_plan_affiliation_observation_context.md  10_implementation_plan_phase7_teachability_review.md  11_implementation_plan_difficulty_depth_evidence.md  12_implementation_plan_affiliation_runtime_boundary.md  12_implementation_plan_workforce_capacity_design.md  12_implementation_plan_workforce_capacity_observation.md  13_implementation_plan_teachability_queue_closure.md  14_implementation_plan_difficulty_queue_closure.md  15_implementation_plan_affiliation_queue_closure.md  16_implementation_plan_gui_thin_client.md  17_implementation_plan_breadth_queue_closure.md  18_implementation_plan_release_metadata_check.md  19_implementation_plan_visual_audio_phase0.md  20_implementation_plan_visual_audio_phase1.md  21_implementation_plan_visual_audio_phase2.md  22_implementation_plan_visual_audio_phase3.md  23_implementation_plan_visual_audio_phase4.md  24_implementation_plan_visual_audio_phase5.md  25_implementation_plan_visual_audio_phase6.md  26_implementation_plan_visual_audio_phase7.md  27_implementation_plan_visual_audio_phase8.md  (+77 more)
gui/: app.mjs  (+56 more)
(+732 files in other folders)
