[package]
name = "hs-mgt-game"
version = "0.10.29"
edition = "2024"
default-run = "hs-mgt-game"

[dependencies]
rmcp = { version = "1.8.0", default-features = false, features = ["macros", "server", "transport-io"] }
rustyline = "18.0.1"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["io-std", "macros", "rt-multi-thread"] }
toml = "1.1.2"
